--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
     "minimum-stability": "stable",
     "require": {
         "kriswallsmith/buzz": "^0.15.0",
-        "phpunit/phpunit": "^4.8"
+        "phpunit/phpunit": "^4.8",
+        "symfony/yaml": "^3.0"
     },
     "autoload": {
         "psr-0": {"DoApiLayer\\": "src/"}
