--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "kriswallsmith/buzz": "^0.15.0",
         "phpunit/phpunit": "^4.8",
-        "symfony/yaml": "^3.0"
+        "symfony/yaml": "^2.3|^3.0"
     },
     "autoload": {
         "psr-0": {"DoApiLayer\\": "src/"}
